--- a/Ultimo Lab/Ultimo Lab/Ultimo Lab.csproj
+++ b/Ultimo Lab/Ultimo Lab/Ultimo Lab.csproj
@@ -60,6 +60,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form3.Designer.cs">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Pelicula.cs" />
     <Compile Include="PeliculaActor.cs" />
     <Compile Include="PeliculaProductor.cs" />
