--- a/Ultimo Lab/Ultimo Lab/Ultimo Lab.csproj
+++ b/Ultimo Lab/Ultimo Lab/Ultimo Lab.csproj
@@ -60,11 +60,17 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form3.cs">
+    <Compile Include="FormActor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form3.Designer.cs">
-      <DependentUpon>Form3.cs</DependentUpon>
+    <Compile Include="FormActor.Designer.cs">
+      <DependentUpon>FormActor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormPelicula.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPelicula.Designer.cs">
+      <DependentUpon>FormPelicula.cs</DependentUpon>
     </Compile>
     <Compile Include="Pelicula.cs" />
     <Compile Include="PeliculaActor.cs" />
@@ -78,8 +84,11 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form3.resx">
-      <DependentUpon>Form3.cs</DependentUpon>
+    <EmbeddedResource Include="FormActor.resx">
+      <DependentUpon>FormActor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPelicula.resx">
+      <DependentUpon>FormPelicula.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
